Back: Отправка кодов в Телеграм через Rabbitmq

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MYSQL_DATABASE=db_name
 MYSQL_USER=db_user
 MYSQL_PASSWORD=db_password
 MYSQL_ROOT_PASSWORD=db_root_password
+
+RABBITMQ_USER=rabbitmq_user
+RABBITMQ_PASSWORD=rabbitmq_password
