--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,13 +12,17 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "eightpoints/guzzle-bundle": "^8.5",
+        "enqueue/amqp-bunny": "^0.10.26",
         "guzzlehttp/guzzle": "^7.0",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
+        "symfony/amqp-messenger": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/messenger": "7.2.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.2.*",
         "symfony/security-bundle": "7.2.*",
         "symfony/yaml": "7.2.*"
