--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     container_name: ${PROJECT_NAME}-php
     depends_on:
       - mysql
+      - rabbitmq
     volumes:
       - ./backend/:/app
 
@@ -37,6 +38,16 @@ services:
       - ./mysql_data:/var/lib/mysql
     ports:
       - 3306:3306
+
+  rabbitmq:
+    image: rabbitmq:4-management
+    container_name: ${PROJECT_NAME}-rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    ports:
+      - 5672:5672
+      - 15672:15672
 
 volumes:
   mysql-data:
