Back: Добавлены сущности и логика уведомлений по SSE

--- a/backend/config/packages/lexik_jwt_authentication.yaml
+++ b/backend/config/packages/lexik_jwt_authentication.yaml
@@ -15,4 +15,5 @@ lexik_jwt_authentication:
         cookie:
             enabled: false
         query_parameter:
-            enabled: false
+            enabled: true
+            name: jwt
