--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -20,13 +20,22 @@ http {
             fastcgi_index index.php;
         }
 
-        # location /api/ {
-        #     proxy_pass http://php:2222/;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
+        # Прокси для SSE запросов на php контейнер
+        location /api/notifications/stream {
+            fastcgi_pass php:9000;
+
+            fastcgi_read_timeout 60s;
+            fastcgi_send_timeout 60s;
+            
+            fastcgi_param SCRIPT_FILENAME /app/public/index.php;
+            include fastcgi_params;
+            
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header Connection '';
+            proxy_set_header X-Real-IP $remote_addr;
+            
+            fastcgi_keep_conn on;
+        }
     }
 }
