--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -27,6 +27,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            Notifications:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Notifications/Entity'
+                prefix: 'App\Notifications\Entity'
+                alias: Notifications
         controller_resolver:
             auto_mapping: false
 
