--- a/backend/config/packages/messenger.yaml
+++ b/backend/config/packages/messenger.yaml
@@ -1,7 +1,7 @@
 framework:
     messenger:
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        failure_transport: failed
+        # failure_transport: failed
 
         transports:
             telegram_notifications:
@@ -12,14 +12,6 @@ framework:
                         type: direct
                     queues:
                         telegram_notifications: ~
-                retry_strategy:
-                    max_retries: 3
-                    delay: 1000
-                    multiplier: 2
-                    max_delay: 0
-
-            failed:
-                dsn: "doctrine://default?queue_name=failed"
 
         routing:
             App\Telegram\Messages\TelegramNotification: telegram_notifications
