Back: Добавлен Redis для корректной работы SSE

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ MYSQL_ROOT_PASSWORD=db_root_password
 
 RABBITMQ_USER=rabbitmq_user
 RABBITMQ_PASSWORD=rabbitmq_password
+
+REDIS_PASSWORD=my_redis_password
+REDIS_USER=my_user
+REDIS_USER_PASSWORD=my_user_password
