--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
+        "predis/predis": "^3.0",
         "symfony/amqp-messenger": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
