--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     depends_on:
       - mysql
       - rabbitmq
+      - redis
     volumes:
       - ./backend/:/app
 
@@ -48,6 +49,18 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+
+  redis:
+    image: redis:8
+    container_name: ${PROJECT_NAME}-redis
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_USER: ${REDIS_USER}
+      REDIS_USER_PASSWORD: ${REDIS_USER_PASSWORD}
+    ports:
+      - "6380:6379"
+    volumes:
+      - ./redisdata:/data
 
 volumes:
   mysql-data:
