--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,4 +1,32 @@
-
 ###> symfony/framework-bundle ###
-APP_SECRET=02b3f7ebfaaafc77aa87a8af8f7e2c1e
+APP_ENV=dev
+APP_SECRET=
 ###< symfony/framework-bundle ###
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_GROUP_ID=
+
+NEWS_API_KEY=
+
+REDIS_URL=redis://redis:6379
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://root:db_root_password@langame-mysql:3306/db_name?serverVersion=9"
+###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=
+###< lexik/jwt-authentication-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=amqp://rabbitmq_user:rabbitmq_password@rabbitmq:5672/%2f/
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
