--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,28 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./.docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./frontend/.output/public:/var/www/
+      - php-socket:/var/run/php
     depends_on:
       - php
-      - node
 
   php:
     build:
-      dockerfile: docker/php/Dockerfile
+      dockerfile: .docker/php/Dockerfile
     container_name: ${PROJECT_NAME}-php
     depends_on:
       - mysql
       - rabbitmq
       - redis
     volumes:
+      - ./.docker/php/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf
       - ./backend/:/app
+      - php-socket:/var/run/php
 
   node:
     build:
-      dockerfile: docker/node/Dockerfile
+      dockerfile: .docker/node/Dockerfile
     container_name: ${PROJECT_NAME}-node
  
   mysql:
@@ -65,4 +67,5 @@ services:
 volumes:
   mysql-data:
     driver: local
-
+  php-socket:
+    driver: local
